# networks

./: .bazelrc  WORKSPACE  go.mod  go.sum
backend/: BUILD.bazel  backend_config.cc  backend_config.h  grpc_call_data.cc  grpc_call_data.h  logging.cc  logging.h  server.cc  server.h  user_groups.cc  user_groups.h
backend/server/: BUILD.bazel  main.cc
backend/tests/: BUILD.bazel  server_test.cc  user_groups_test.cc
bazel/: BUILD.bazel  dll.bzl
client/: internal.go  rpc.go  state.go
client/client/: internal.go  main.go
client/configuration/: configuration.go  internal.go
client/constants/: const.go
client/messages/: builder.go  classifier.go  internal.go  reply.go  storage.go
client/parser/: internal.go  send_time_parser.go  user_parser.go
client/ui/: choose.go  clean.go  create.go  fill.go  init.go  ui.go
client/utils/: path.go  spinlock.go  user.go
client/utils/ut/: concurrent_spinlock_test.go  spinlock_benchmark.go  spinlock_test.go
contrib/: BUILD.bazel  BUILD.inicpp  BUILD.mysqlxx  BUILD.pqxx  BUILD.spdlog  inicpp.patch  libmysqlxx.patch  libpqxx.patch
core/: BUILD.bazel  array_ref.h  array_size.h  assert.cc  assert.h  async.h  at_exit.cc  at_exit.h  atomic.h  atomic_ops.h  backtrace.cc  backtrace.h  condvar.cc  condvar.h  datetime.cc  datetime.h  demangle.cc  demangle.h  dynlib.cc  dynlib.h  error.cc  error.h  event.cc  event.h  exception.cc  exception.h  execpath.cc  execpath.h  future-inl.h  future.h  fwd.h  guard.h  intrusive_list.h  intrusive_ptr.cc  intrusive_ptr.h  macro.h  mutex.cc  mutex.h  noncopyable.h  progname.cc  (+19 more)
core/ut/: BUILD.bazel  array_ref_ut.cc  assert_ut.cc  async_ut.cc  at_exit_ut.cc  atomic_ut.cc  backtrace_ut.cc  condvar_ut.cc  event_ut.cc  exception_ut.cc  future_ut.cc  guard_ut.cc  intrusive_list_ut.cc  intrusive_ptr_ut.cc  mutex_ut.cc  scope_ut.cc  singleton_ut.cc  spinlock_ut.cc  thread_factory_ut.cc  thread_pool_ut.cc  thread_ut.cc  tls_ut.cc
deploy/: Dockerfile  docker-compose.yaml  pg_config.ini  server_config.ini
deploy/pg_migrations/: db.sql
docs/: docs.html  server.html
pkg/: BUILD.bazel
proto/: BUILD.bazel  from.pb.go  from.proto  message.pb.go  message.proto  receive.pb.go  receive.proto  rpc_service.pb.go  rpc_service.proto  rpc_service_grpc.pb.go  send.pb.go  send.proto  status.pb.go  status.proto
storage/: BUILD.bazel  api.cc  api.h  config.h  simple_test.cc  storage.h  storage_lock.h
storage/database/: BUILD.bazel  api.h  config.cc  config.h  mysql_api.cc  mysql_storage.cc  mysql_storage.h  psql_api.cc  psql_storage.cc  psql_storage.h
storage/in_memory/: BUILD.bazel  api.cc  in_memory_storage.cc  in_memory_storage.h
storage/in_memory/ut/: BUILD.bazel  storage_ut.cc
